--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,8 @@ wp-content/themes/twenty*/
 # ignore node/grunt dependency directories
 node_modules/
 
+wp-content/themes/lrc/dist*
+
 # ignore image files
 *.ai
 *.psd
