--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ wp-content/themes/twenty*/
 # ignore node/grunt dependency directories
 node_modules/
 
-wp-content/themes/lrc/dist*
+wp-content/themes/lrc/dist/
 
 # ignore image files
 *.ai
