--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@
 
 # ignore everything in the root except the "wp-content" directory.
 /*
+!package.json
+!package-lock.json
+!webpack.config.js
 !wp-content/
 
 # ignore all files starting with .
