Added flickity for slider

--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "flickity": "^2.2.1"
+  }
 }
