--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/wp-content/themes/latin-rogue-cleaning",
-  "devUrl": "https://sage-test.dev.cc",
+  "devUrl": "https://lrc-sage.dev.cc",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
